objects/et4ae5__SupportRequest__c.object
<CustomObject>
    <label>Support Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Support Request</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>et4ae5__Comment__c</fullName>
        <label>Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__RequestEmail__c</fullName>
        <formula>CreatedBy.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RequestEmail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__RequestPhone__c</fullName>
        <formula>CreatedBy.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RequestPhone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Send_Definition__c</fullName>
        <label>Send Definition</label>
        <referenceTo>et4ae5__SendDefinition__c</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>Support_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>et4ae5__Support_Ticket_Recipient__c</fullName>
        <description>The email address to send support tickets to.</description>
        <label>Support Ticket Recipient</label>
        <type>Email</type>
    </fields>
</CustomObject>